Fixed upload image button alignment

--- a/src/components/Books/style.scss
+++ b/src/components/Books/style.scss
@@ -14,3 +14,8 @@
   margin-top: 12px;
   display: block;
 }
+
+.uploadButton{
+  position: relative;
+  top: 1px;
+}
